--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -25,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.1",
+    "framer-motion": "^11.11.17",
     "isomorphic-dompurify": "^2.16.0",
     "lucide-react": "^0.454.0",
     "next": "^15.0.4-canary.11",
