--- a/website/package.json
+++ b/website/package.json
@@ -28,6 +28,7 @@
     "dompurify": "^3.2.1",
     "framer-motion": "^11.11.17",
     "isomorphic-dompurify": "^2.16.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.454.0",
     "next": "^15.0.4-canary.11",
     "next-sanity": "^9.8.3-canary.1",
