--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
     "@nextui-org/react": "^2.4.8",
+    "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -32,6 +34,7 @@
     "isomorphic-dompurify": "^2.16.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.454.0",
+    "markdown-it": "^14.1.0",
     "next": "^15.0.4-canary.11",
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -42,6 +45,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
