--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -31,6 +32,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "dompurify": "^3.2.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.17",
     "isomorphic-dompurify": "^2.16.0",
     "lottie-react": "^2.4.0",
@@ -40,6 +43,7 @@
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-use-measure": "^2.1.1",
     "sanity": "^3.64.3",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
