--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.8",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -27,6 +28,7 @@
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.64.3",
+    "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -43,12 +45,14 @@
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-tsparticles": "^2.12.2",
     "react-use-measure": "^2.1.1",
     "sanity": "^3.64.3",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles-preset-confetti": "^2.12.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
