--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "overrides": {
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "xstate": "5.19.0"
+  },
   "dependencies": {
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "@dotlottie/react-player": "^1.6.19",
     "@nextui-org/react": "^2.4.8",
     "@portabletext/react": "^3.1.0",
@@ -30,6 +37,7 @@
     "@sanity/vision": "^3.64.3",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.15",
+    "@tsparticles/confetti": "^3.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -43,16 +51,14 @@
     "markdown-it": "^14.1.0",
     "next": "^15.0.4-canary.11",
     "next-sanity": "^9.8.3-canary.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-tsparticles": "^2.12.2",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react-use-measure": "^2.1.1",
     "sanity": "^3.64.3",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "tsparticles-preset-confetti": "^2.12.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
