--- a/website/package.json
+++ b/website/package.json
@@ -53,6 +53,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-is": "^19.0.0",
     "react-use-measure": "^2.1.1",
     "sanity": "^3.64.3",
     "slugify": "^1.6.6",
