--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "overrides": {
     "react": "19.0.0-rc-66855b96-20241106",
@@ -51,6 +52,7 @@
     "markdown-it": "^14.1.0",
     "next": "^15.0.4-canary.46",
     "next-sanity": "^9.8.3-canary.1",
+    "next-sitemap": "^4.2.3",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
