--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/table": "^1.1.3",
     "@sanity/vision": "^3.64.3",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.15",
