--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
+    "@next/third-parties": "^15.1.4",
     "@nextui-org/react": "^2.4.8",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
