--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "npm run db:generate && node scripts/migrate.mjs",
+    "db:studio": "drizzle-kit studio"
   },
   "overrides": {
     "react": "19.0.0-rc-66855b96-20241106",
@@ -15,7 +18,11 @@
     "xstate": "5.19.0"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^0.1.12",
+    "@ai-sdk/openai": "^1.1.14",
+    "@clerk/nextjs": "^6.12.1",
     "@dotlottie/react-player": "^1.6.19",
+    "@hookform/resolvers": "^4.1.3",
     "@next/third-parties": "^15.1.4",
     "@nextui-org/react": "^2.4.8",
     "@portabletext/react": "^3.1.0",
@@ -27,11 +34,13 @@
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@sanity/icons": "^3.4.0",
@@ -39,14 +48,20 @@
     "@sanity/table": "^1.1.3",
     "@sanity/vision": "^3.64.3",
     "@supabase/supabase-js": "^2.46.2",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tsparticles/confetti": "^3.7.1",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.1.0",
+    "ai": "^4.1.46",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.2.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.17",
@@ -57,19 +72,28 @@
     "next": "^15.2.0-canary.55",
     "next-sanity": "^9.8.3-canary.1",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.4",
     "patch-package": "^8.0.0",
+    "pg": "^8.13.3",
+    "postgres": "^3.4.5",
     "postinstall-postinstall": "^2.1.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
     "react-is": "^19.0.0",
+    "react-markdown": "^10.0.0",
     "react-use-measure": "^2.1.1",
     "resend": "^4.1.2",
     "sanity": "^3.64.3",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.1",
     "styled-components": "^6.1.13",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
@@ -77,6 +101,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sanitize-html": "^2.13.0",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
