--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dompurify": "^3.2.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
+    "drizzle-zod": "^0.7.0",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.17",
@@ -93,6 +94,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -101,6 +103,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sanitize-html": "^2.13.0",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.30.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
