--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "website",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -71,7 +72,7 @@
 		"lottie-react": "^2.4.0",
 		"lucide-react": "^0.454.0",
 		"markdown-it": "^14.1.0",
-		"next": "^15.2.0-canary.55",
+		"next": "15.6.0-canary.17",
 		"next-sanity": "^9.8.3-canary.1",
 		"next-sitemap": "^4.2.3",
 		"next-themes": "^0.4.4",
