--- a/package.json
+++ b/package.json
@@ -1,119 +1,132 @@
 {
-  "name": "website",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "npm run db:generate && node scripts/migrate.mjs",
-    "db:studio": "drizzle-kit studio"
-  },
-  "overrides": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "xstate": "5.19.0"
-  },
-  "dependencies": {
-    "@ai-sdk/deepseek": "^0.1.12",
-    "@ai-sdk/openai": "^1.1.14",
-    "@clerk/nextjs": "^6.12.1",
-    "@dotlottie/react-player": "^1.6.19",
-    "@hookform/resolvers": "^4.1.3",
-    "@next/third-parties": "^15.1.4",
-    "@portabletext/react": "^3.1.0",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@sanity/icons": "^3.4.0",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/table": "^1.1.3",
-    "@sanity/vision": "^3.64.3",
-    "@supabase/supabase-js": "^2.46.2",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-virtual": "^3.13.12",
-    "@tsparticles/confetti": "^3.7.1",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/postgres": "^0.10.0",
-    "@vercel/speed-insights": "^1.1.0",
-    "ai": "^4.3.19",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^2.30.0",
-    "dompurify": "^3.2.1",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.40.0",
-    "drizzle-zod": "^0.7.0",
-    "embla-carousel-autoplay": "^8.5.1",
-    "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^11.11.17",
-    "isomorphic-dompurify": "^2.16.0",
-    "lottie-react": "^2.4.0",
-    "lucide-react": "^0.454.0",
-    "markdown-it": "^14.1.0",
-    "next": "15.6.0-canary.17",
-    "next-sanity": "^9.8.3-canary.1",
-    "next-sitemap": "^4.2.3",
-    "next-themes": "^0.4.4",
-    "patch-package": "^8.0.0",
-    "pg": "^8.13.3",
-    "postgres": "^3.4.5",
-    "postinstall-postinstall": "^2.1.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0",
-    "react-is": "^19.0.0",
-    "react-markdown": "^10.0.0",
-    "react-use-measure": "^2.1.1",
-    "resend": "^4.1.2",
-    "sanity": "^3.64.3",
-    "slugify": "^1.6.6",
-    "sonner": "^2.0.1",
-    "styled-components": "^6.1.13",
-    "swr": "^2.3.2",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@types/markdown-it": "^14.1.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/sanitize-html": "^2.13.0",
-    "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.30.5",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "supabase": "^2.12.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "website",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postbuild": "next-sitemap",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "npm run db:generate && node scripts/migrate.mjs",
+		"db:studio": "drizzle-kit studio",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:run": "vitest run",
+		"lighthouse": "lhci autorun",
+		"lighthouse:ci": "lhci autorun --upload.target=temporary-public-storage",
+		"perf:test": "lhci autorun --config=./lighthouse-ci.config.js",
+		"perf:audit": "lighthouse $NEXT_PUBLIC_BASE_URL --output=json --output-path=./lighthouse-report.json"
+	},
+	"overrides": {
+		"react": "19.0.0-rc-66855b96-20241106",
+		"react-dom": "19.0.0-rc-66855b96-20241106",
+		"xstate": "5.19.0"
+	},
+	"dependencies": {
+		"@ai-sdk/deepseek": "^0.1.12",
+		"@ai-sdk/openai": "^1.1.14",
+		"@clerk/nextjs": "^6.12.1",
+		"@dotlottie/react-player": "^1.6.19",
+		"@hookform/resolvers": "^4.1.3",
+		"@next/third-parties": "^15.1.4",
+		"@portabletext/react": "^3.1.0",
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
+		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-checkbox": "^1.1.2",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-scroll-area": "^1.2.2",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-switch": "^1.1.3",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.4",
+		"@radix-ui/react-visually-hidden": "^1.2.3",
+		"@sanity/icons": "^3.4.0",
+		"@sanity/image-url": "^1.1.0",
+		"@sanity/table": "^1.1.3",
+		"@sanity/vision": "^3.64.3",
+		"@supabase/supabase-js": "^2.46.2",
+		"@t3-oss/env-nextjs": "^0.12.0",
+		"@tailwindcss/typography": "^0.5.15",
+		"@tanstack/react-virtual": "^3.13.12",
+		"@tsparticles/confetti": "^3.7.1",
+		"@vercel/analytics": "^1.4.1",
+		"@vercel/postgres": "^0.10.0",
+		"@vercel/speed-insights": "^1.1.0",
+		"ai": "^4.3.19",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
+		"date-fns": "^2.30.0",
+		"dompurify": "^3.2.1",
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.40.0",
+		"drizzle-zod": "^0.7.0",
+		"embla-carousel-autoplay": "^8.5.1",
+		"embla-carousel-react": "^8.5.1",
+		"framer-motion": "^11.11.17",
+		"isomorphic-dompurify": "^2.16.0",
+		"lottie-react": "^2.4.0",
+		"lucide-react": "^0.454.0",
+		"markdown-it": "^14.1.0",
+		"next": "15.6.0-canary.17",
+		"next-sanity": "^9.8.3-canary.1",
+		"next-sitemap": "^4.2.3",
+		"next-themes": "^0.4.4",
+		"patch-package": "^8.0.0",
+		"pg": "^8.13.3",
+		"postgres": "^3.4.5",
+		"postinstall-postinstall": "^2.1.0",
+		"react": "19.0.0-rc-66855b96-20241106",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "19.0.0-rc-66855b96-20241106",
+		"react-hook-form": "^7.54.2",
+		"react-icons": "^5.5.0",
+		"react-is": "^19.0.0",
+		"react-markdown": "^10.0.0",
+		"react-use-measure": "^2.1.1",
+		"resend": "^4.1.2",
+		"sanity": "^3.64.3",
+		"slugify": "^1.6.6",
+		"sonner": "^2.0.1",
+		"styled-components": "^6.1.13",
+		"swr": "^2.3.2",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"ts-node": "^10.9.2",
+		"uuid": "^11.1.0",
+		"zod": "^3.24.2"
+	},
+	"devDependencies": {
+		"@lhci/cli": "^0.13.0",
+		"@types/markdown-it": "^14.1.2",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/sanitize-html": "^2.13.0",
+		"@types/uuid": "^10.0.0",
+		"@vitest/ui": "^3.2.4",
+		"drizzle-kit": "^0.30.5",
+		"eslint": "^8",
+		"eslint-config-next": "15.0.3",
+		"jsdom": "^27.0.0",
+		"lighthouse": "^12.0.0",
+		"postcss": "^8",
+		"puppeteer": "^24.23.0",
+		"supabase": "^2.12.1",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5",
+		"vitest": "^3.2.4"
+	}
 }
