chore: Migrate database operations from Drizzle ORM to Prisma, update API routes for plant and garden management, and enhance ESLint configuration for better code quality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
-  "overrides": [
-    {
-      "files": ["next-sitemap.config.js"],
-      "rules": {
-        "@typescript-eslint/no-var-requires": "off"
-      }
-    }
-  ]
+	"extends": ["next/core-web-vitals", "next/typescript"],
+	"ignorePatterns": ["lib/generated/**/*", "node_modules/**/*"],
+	"overrides": [
+		{
+			"files": ["next-sitemap.config.js"],
+			"rules": {
+				"@typescript-eslint/no-var-requires": "off"
+			}
+		}
+	]
 }
