--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"start": "next start",
 		"lint": "next lint",
 		"postbuild": "next-sitemap",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "npm run db:generate && node scripts/migrate.mjs",
-		"db:studio": "drizzle-kit studio",
+		"db:generate": "prisma generate",
+		"db:migrate": "prisma migrate dev",
+		"db:studio": "prisma studio",
+		"db:push": "prisma db push",
+		"db:seed": "prisma db seed",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
 		"test:run": "vitest run",
@@ -33,6 +35,7 @@
 		"@hookform/resolvers": "^4.1.3",
 		"@next/third-parties": "^15.1.4",
 		"@portabletext/react": "^3.1.0",
+		"@prisma/client": "^6.16.3",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -71,8 +74,6 @@
 		"date-fns": "^2.30.0",
 		"dompurify": "^3.2.1",
 		"dotenv": "^16.4.7",
-		"drizzle-orm": "^0.40.0",
-		"drizzle-zod": "^0.7.0",
 		"embla-carousel-autoplay": "^8.5.1",
 		"embla-carousel-react": "^8.5.1",
 		"framer-motion": "^11.11.17",
@@ -88,6 +89,7 @@
 		"pg": "^8.13.3",
 		"postgres": "^3.4.5",
 		"postinstall-postinstall": "^2.1.0",
+		"prisma": "^6.16.3",
 		"react": "19.0.0-rc-66855b96-20241106",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "19.0.0-rc-66855b96-20241106",
@@ -117,7 +119,6 @@
 		"@types/sanitize-html": "^2.13.0",
 		"@types/uuid": "^10.0.0",
 		"@vitest/ui": "^3.2.4",
-		"drizzle-kit": "^0.30.5",
 		"eslint": "^8",
 		"eslint-config-next": "15.0.3",
 		"jsdom": "^27.0.0",
