--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"critters": "^0.0.25",
 		"date-fns": "^2.30.0",
 		"dompurify": "^3.2.1",
 		"dotenv": "^16.4.7",
