--- a/package.json
+++ b/package.json
@@ -114,6 +114,9 @@
 	},
 	"devDependencies": {
 		"@lhci/cli": "^0.13.0",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/animejs": "^3.1.13",
 		"@types/markdown-it": "^14.1.2",
 		"@types/node": "^20",
